Fix preview modal close btn, caption background, input spacing

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -80,6 +80,7 @@
   line-height: 1.1;
   letter-spacing: 0;
   color: #212121b2;
+  margin: 0 0 30px;
 }
 
 .modal__input {
@@ -127,6 +128,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  position: relative;
 }
 
 .modal_type_preview {
@@ -145,19 +147,22 @@
 .modal__close-btn_type_preview {
   width: 40px;
   height: 40px;
-  top: 0;
-  right: -52.5px;
+  top: -48px;
+  right: 0;
 }
 
 .modal__caption {
   color: #fff;
+  background-color: #000000b2;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0;
   margin: 0;
-  padding: 8px 0;
+  padding: 8px 12px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 @media (max-width: 480px) {
